--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,41 +1,41 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    /*compileOnly("com.github.GTNewHorizons:StructureLib:master-SNAPSHOT:dev") {  // Transitive from GT5-Unofficial
+    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
+    compileOnly("com.github.GTNewHorizons:StructureLib:1.0.14:dev") { 
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev") {  // Transitive from GT5-Unofficial
+    compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {  
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:CodeChickenLib:master-SNAPSHOT:dev") {  // Transitive from GT5-Unofficial
+    compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
         transitive = false
     }
-    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {  // Transitive from GT5-Unofficial
+    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
         transitive = false
-    }*/
+    }
 
     compile("curse.maven:cofh-core-69162:2388751")
 
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Baubles:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Baubles:1.0.1.14:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.4:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:EnderIO:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.27:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:EnderCore:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:SC2:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:SC2:2.0.1:dev") {
         transitive = false
     }
 
@@ -48,7 +48,7 @@ dependencies {
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Chisel:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Chisel:2.10.6-GTNH:dev") {
         transitive = false
     }
 }
