--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,18 +2,14 @@
 
 dependencies {
     compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
-    compileOnly("com.github.GTNewHorizons:StructureLib:1.0.14:dev") { 
-        transitive = false
-    }
+    compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev") 
     compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {  
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
         transitive = false
     }
-    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
-        transitive = false
-    }
+    compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
     compile("curse.maven:cofh-core-69162:2388751")
 
