--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,9 +1,10 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:Galacticraft:master-SNAPSHOT:dev")
-
+    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
+    compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev")
+    compile("com.github.GTNewHorizons:Galacticraft:3.0.36-GTNH:dev")
+    runtime("com.github.GTNewHorizons:StructureLib:1.0.14:dev")
+    runtime("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
     compile files("dependencies/bartworks[1.7.10]-0.5.2_pre25-dev.jar")
 }
