--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,6 +2,10 @@
 
 repositories {
     maven {
+        name = "GTNH Maven"
+        url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+    }
+    maven {
         name = "sponge"
         url = "https://repo.spongepowered.org/repository/maven-public"
     }
