--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ import java.util.concurrent.TimeUnit
 
 buildscript {
     repositories {
+    maven {
+        name = "GTNH Maven"
+        url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+    }
         mavenCentral()
 		maven {
 			name = "gt"
@@ -58,29 +62,23 @@ minecraft {
 }
 
 repositories {
+    maven {
+        name = "GTNH Maven"
+        url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+    }
     jcenter()
-    maven { // EnderIO & EnderCore
-        name = 'tterrag Repo'
-        url = "http://maven.tterrag.com"
-    }
-    maven {
-        name = "CodeChicken"
-        url = "http://chickenbones.net/maven/"
-    }
-    maven {
-        url = "https://jitpack.io"
-    }
     maven {
         name = "ic2"
-        url = "http://downloads.gtnewhorizons.com/Mods_for_Jenkins/"
+        url = "http://maven.ic2.player.to/"
+        metadataSources {
+            mavenPom()
+            artifact()
+        }
+
     }
-    ivy {
-        name = "gtnh_download_source"
-        artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
-    }
+
     maven {
-        name = "UsrvDE/GTNH"
-        url = "http://jenkins.usrv.eu:8081/nexus/content/repositories/releases/"
+        url = "https://jitpack.io"
     }
     maven {
         name = "gt"
@@ -91,50 +89,50 @@ repositories {
         url = "https://cursemaven.com"
     }
     maven {
-        name = "ic2"
-        url = "http://maven.ic2.player.to/"
-    }
-    maven {
         url = "http://www.ryanliptak.com/maven/"
     }
 }
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    compileOnly("com.github.GTNewHorizons:EnderCore:master-SNAPSHOT:dev") {
+    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
+    compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev")
+    compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
+
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:bartworks:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:bartworks:0.5.34:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:GTplusplus:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:GTplusplus:1.7.24:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:AppleCore:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:AppleCore:3.1.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:TecTech:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:TecTech:4.10.15:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.4:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:EnderIO:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.27:dev") {
         transitive = false
     }
     compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ExtraCells2:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:ExtraCells2:2.5.4:dev") {
         transitive = false
     }
-/*    compileOnly("com.github.GTNewHorizons:Avaritia:master-SNAPSHOT") {
+/*    compileOnly("com.github.GTNewHorizons:Avaritia:1.22) {
         setChanging(true)
     }*/
     compile files('Thaumcraft-1.7.10-4.2.3.5.deobf.jar')
