--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,18 +12,14 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:bartworks:0.5.34:dev") {
-        transitive = false
-    }
+    compile("com.github.GTNewHorizons:bartworks:0.5.34:dev")
     compileOnly("com.github.GTNewHorizons:GTplusplus:1.7.24:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:AppleCore:3.1.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:TecTech:4.10.15:dev") {
-        transitive = false
-    }
+    compile("com.github.GTNewHorizons:TecTech:4.10.15:dev")
     compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.4:dev") {
         transitive = false
     }
@@ -37,9 +33,10 @@ dependencies {
         transitive = false
     }
 	
-	compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-	
+    runtime("com.github.GTNewHorizons:Baubles:1.0.1.14:dev")
+    runtime("com.github.GTNewHorizons:Yamcl:0.5.82:dev")
     compileOnly("com.github.GTNewHorizons:ExtraCells2:2.5.4:dev") {
         transitive = false
     }
