--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,6 +6,9 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {  
         transitive = false
     }
+    compileOnly("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev") {
+        transitive = false
+    }
     compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
         transitive = false
     }
