--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,6 +2,10 @@
 
 dependencies {
     compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+
 
     compile("com.opencsv:opencsv:4.0")
 }
