--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,9 +4,10 @@
 // also being more explicit about what is depended on.
 
 dependencies {
-    compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev")
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev") 
+    compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compileOnly("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+    compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
@@ -50,6 +51,9 @@ dependencies {
         transitive = false
     }
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Avaritia:1.22:dev") {
         transitive = false
     }
     compileOnly("com.google.auto.value:auto-value-annotations:1.8.2") {
