--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,7 +8,7 @@ dependencies {
     compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
     compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
-    
+
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
     compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
@@ -29,7 +29,10 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.10-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+    compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+        transitive = false
+    }
+    compile("com.github.GTNewHorizons:Chisel:2.10.6-GTNH:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.27:dev") {
