--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,12 +3,9 @@
 dependencies {
     compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
     compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev") 
-    compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {  
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
-        transitive = false
-    }
+    compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compileOnly("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+    compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
     compile("curse.maven:cofh-core-69162:2388751")
