--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,9 @@ gradleTokenModName = GRADLETOKEN_MODNAME
 gradleTokenVersion = GRADLETOKEN_VERSION
 gradleTokenGroupName = GRADLETOKEN_GROUPNAME
 
+systemProp.org.gradle.internal.http.connectionTimeout=180000
+systemProp.org.gradle.internal.http.socketTimeout=180000
+
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
 # Example value: apiPackage = api + modGroup = com.myname.mymodid -> com.myname.mymodid.api
