--- a/repositories.gradle
+++ b/repositories.gradle
@@ -1,6 +1,15 @@
 // Add any additional repositories for your dependencies here
 
 repositories {
+    jcenter()
+    maven { // EnderIO & EnderCore
+        name = 'tterrag Repo'
+        url = "http://maven.tterrag.com"
+    }
+    maven {
+        name = "CodeChicken"
+        url = "http://chickenbones.net/maven/"
+    }
     maven {
         name = "sponge"
         url = "https://repo.spongepowered.org/repository/maven-public"
@@ -13,10 +22,30 @@ repositories {
             artifact()
         }
     }
+	
+	maven {
+		url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+	}
+	
     maven {
         url "https://cursemaven.com"
     }
     maven {
         url = "https://jitpack.io"
+    }
+    ivy {
+        name = "gtnh_download_source"
+        artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
+    }
+    maven {
+        name = "UsrvDE/GTNH"
+        url = "http://jenkins.usrv.eu:8081/nexus/content/repositories/releases/"
+    }
+    maven {
+        name = "gt"
+        url = "https://gregtech.overminddl1.com/"
+    }
+    maven {
+        url = "http://www.ryanliptak.com/maven/"
     }
 }
