--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,11 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.18:dev")
-    compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev") 
-    compileOnly("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {  
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
-        transitive = false
-    }
+    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.19:dev")
+    compile("com.github.GTNewHorizons:StructureLib:1.0.15:dev") 
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.3-GTNH:dev") 
+    compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
     compile("curse.maven:cofh-core-69162:2388751")
@@ -23,7 +17,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:Baubles:1.0.1.14:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.4:dev") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.5:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:Railcraft:9.13.5:dev") {
