--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ dependencies {
     compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev")
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.3-GTNH:dev")
     compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
         transitive = false
     }
@@ -38,6 +38,8 @@ dependencies {
 	
 	compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+	
+	//compile files('Botdustries-1.7.10-1.0.1.jar')
     
 	runtime("com.github.GTNewHorizons:Baubles:1.0.1.14:dev")
     runtime("com.github.GTNewHorizons:Yamcl:0.5.82:dev")
