--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile files("dependencies/OpenModularTurrets-1.7.10-2.2.10-237-deobf.jar")
     compile files("dependencies/AdvancedSolarPanel_1.7.10_Edition.jar")
     compile files("dependencies/worldedit-forge-mc1.7.10-6.1.1-dist.jar")
+    compile files("dependencies/WorldEditCuiFe-v1.0.7-mf-1.7.10-10.13.4.1566.jar")
 }
