--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ dependencies {
     compile("com.github.GTNewHorizons:StructureLib:1.0.15:dev")
     compile("com.github.GTNewHorizons:NotEnoughItems:2.2.3-GTNH:dev")
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.2:dev")
     compile("com.github.GTNewHorizons:waila:1.5.18:dev")
     
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
@@ -27,7 +27,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:AppleCore:3.1.7:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.10-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.12-GTNH:dev") {
         transitive = false
     }
     compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
@@ -61,4 +61,7 @@ dependencies {
         transitive = false
     }
     annotationProcessor("com.google.auto.value:auto-value:1.8.2")
+    //runtime('com.github.GTNewHorizons:bartworks:0.5.34.1:dev') {
+    //    exclude group:'com.github.GTNewHorizons', module:'GT5-Unofficial'
+    //}
 }
