--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -30,6 +30,9 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.10-GTNH:dev") {
         transitive = false
     }
+    compileOnly("com.github.GTNewHorizons:harvestcraft:1.0.11-GTNH:dev") {
+        transitive = false
+    }
     compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
         transitive = false
     }
