--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ dependencies {
     compile("com.github.GTNewHorizons:StructureLib:1.0.15:dev")
     compile("com.github.GTNewHorizons:NotEnoughItems:2.2.5-GTNH:dev")
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.2:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev")
     compile("com.github.GTNewHorizons:waila:1.5.18:dev")
     
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
@@ -21,28 +21,28 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:Railcraft:9.13.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Galacticraft:3.0.37-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:Galacticraft:3.0.38-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:AppleCore:3.1.7:dev") {
+    compileOnly("com.github.GTNewHorizons:AppleCore:3.1.9:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.12-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.9.0.13-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:harvestcraft:1.0.11-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:harvestcraft:1.0.12-GTNH:dev") {
         transitive = false
     }
-    compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+    compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-75-GTNH:dev") {
         transitive = false
     }
-    compile("com.github.GTNewHorizons:Chisel:2.10.6-GTNH:dev") {
+    compile("com.github.GTNewHorizons:Chisel:2.10.8-GTNH:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.27:dev") {
+    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.28:dev") {
         transitive = false
     }
-    compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
+    compileOnly("com.github.GTNewHorizons:BuildCraft:7.1.25:dev") {
         transitive = false
     }
     compileOnly("commons-io:commons-io:2.4") {
@@ -64,7 +64,7 @@ dependencies {
         transitive = false
     }
     annotationProcessor("com.google.auto.value:auto-value:1.8.2")
-    //runtime('com.github.GTNewHorizons:bartworks:0.5.34.1:dev') {
+    //runtime('com.github.GTNewHorizons:bartworks:0.5.36:dev') {
     //    exclude group:'com.github.GTNewHorizons', module:'GT5-Unofficial'
     //}
 }
