Change GT++ version
(cherry picked from commit 5bd1be82b8a4004f0d26cc41d4f1f1c10c2ef7a1)

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,7 +19,7 @@ dependencies {
         transitive = false
     }*/
 
-    compile("com.github.GTNewHorizons:GTplusplus:master-SNAPSHOT:dev") {
+    compile("com.github.GTNewHorizons:GTplusplus:1.7.27:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev") {
