update buildscript for maven

--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,14 +2,25 @@
 
 repositories {
     maven {
-        name = "ic2"
-        url = "https://maven.ic2.player.to/"
+        name 'GTNH Maven'
+        url 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
+        allowInsecureProtocol
+    }
+    maven {
+        name 'ic2'
+        url 'https://maven.ic2.player.to/'
         metadataSources {
             mavenPom()
             artifact()
         }
     }
     maven {
-        url = "https://jitpack.io"
+        url 'https://cursemaven.com'
+        content {
+            includeGroup 'curse.maven'
+        }
+    }
+    maven {
+        url 'https://jitpack.io'
     }
 }
