--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,12 +1,12 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:TecTech:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:ThaumicTinkerer:master-SNAPSHOT:dev")
+    compile 'com.github.GTNewHorizons:GT5-Unofficial:5.09.40.34:dev'
+    compile 'com.github.GTNewHorizons:TecTech:5.0.5.1:dev'
+    compile 'com.github.GTNewHorizons:ThaumicTinkerer:2.6.3:dev'
 
-    compile("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev")
-    compile("org.joml:joml:1.9.18")
+    compile 'thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev'
+    compileOnly 'org.joml:joml:1.10.2'
 
-    runtime("com.github.GTNewHorizons:Baubles:master-SNAPSHOT:dev")
+    runtime 'com.github.GTNewHorizons:Baubles:1.0.1.14:dev'
 }
