Base work adding 3 new tiers of coils. (#885)
* Base work adding 4 new tiers of coils.

* Remove OPV tier.
Remove nonsensical coil tier tags. (Awak = UIV, really? No thanks)
Add proper texture for Hypogen, Infinity and Eternal coils.

* Revert avaratia dep via import by Alk. If someone can implement cosmic rendering here then great but that is well beyond me.

Co-authored-by: GTNH-Colen <54497873+GTNH-Colen@users.noreply.github.com>

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -59,6 +59,9 @@ dependencies {
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
         transitive = false
     }
+    compileOnly("com.github.GTNewHorizons:Avaritia:1.22:dev") {
+        transitive = false
+    }
     compileOnly("com.google.auto.value:auto-value-annotations:1.8.2") {
         transitive = false
     }
