--- a/repositories.gradle
+++ b/repositories.gradle
@@ -15,6 +15,15 @@ repositories {
         }
     }
     maven {
+        // IC2
+        name = "ic2"
+        url = "https://maven2.ic2.player.to/"
+        metadataSources {
+            mavenPom()
+            artifact()
+        }
+    }
+    maven {
         name 'CurseForge Maven'
         url 'https://minecraft.curseforge.com/api/maven/'
         metadataSources {
